Work around a FF clipping bug.
Firefox (version 152?) introduced a bug that prevents clipping svg's by
container's round corners. This commit introduces a new CSS rule to
work around this problem.

--- a/public/css/embedded.css
+++ b/public/css/embedded.css
@@ -13,6 +13,12 @@
   overflow: hidden;
 }
 
+.avatar svg {
+  /* Work around a FF clipping bug. */
+  border-radius: 50%;
+  border: 0.1px solid transparent;
+}
+
 .wiki-link-no-title a {
   color: #e0162e;
 }
